fix: festival spacing

--- a/src/app/festival/festival.component.scss
+++ b/src/app/festival/festival.component.scss
@@ -67,6 +67,10 @@
   a {
     color: $color-dark-green;
   }
+
+  p {
+    margin-bottom: 1rem;
+  }
 }
 
 .music {
